// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtn.js should have v-btn--depressed and v-btn--outline classes when using outline prop 1`] = `

<button type="button"
        class="v-btn v-btn--outline v-btn--depressed"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should have v-btn--depressed class when using depressed prop 1`] = `

<button type="button"
        class="v-btn v-btn--depressed"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should have v-btn--flat class when using flat and depressed props 1`] = `

<button type="button"
        class="v-btn v-btn--flat"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should have v-btn--outline and v-btn--depressed classes when using outline prop 1`] = `

<button type="button"
        class="v-btn v-btn--outline v-btn--depressed"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render a <button> tag when using to prop 1`] = `

<button class="v-btn v-btn--router">
</button>

`;

exports[`VBtn.js should render an <a> tag when using href prop 1`] = `

<a href="http://www.google.com"
   class="v-btn"
>
  <div class="v-btn__content">
  </div>
</a>

`;

exports[`VBtn.js should render component and match snapshot 1`] = `

<button type="button"
        class="v-btn"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with color prop and match snapshot 1`] = `

<button type="button"
        class="v-btn green darken-1"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with color prop and match snapshot 2`] = `

<button type="button"
        class="v-btn v-btn--flat green--text text--darken-1"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with loader and match snapshot 1`] = `

<button type="button"
        class="v-btn v-btn--loader"
>
  <div class="v-btn__content">
  </div>
  <span class="v-btn__loading">
    <div class="v-progress-circular v-progress-circular--indeterminate"
         style="height: 23px; width: 23px;"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381"
      >
        <circle fill="transparent"
                cx="43.80952380952381"
                cy="43.80952380952381"
                r="20"
                stroke-width="3.8095238095238093"
                stroke-dasharray="125.664"
                stroke-dashoffset="125.66370614359172px"
                class="v-progress-circular__overlay"
        >
        </circle>
      </svg>
      <div class="v-progress-circular__info">
      </div>
    </div>
  </span>
</button>

`;

exports[`VBtn.js should render component with loader slot and match snapshot 1`] = `

<button type="button"
        class="v-btn v-btn--loader"
>
  <div class="v-btn__content">
  </div>
  <span class="v-btn__loading">
    <span>
      loader
    </span>
  </span>
</button>

`;

exports[`VBtn.js should render specified tag when using tag prop 1`] = `

<a class="v-btn">
  <div class="v-btn__content">
  </div>
</a>

`;

exports[`VBtn.js should use custom active-class 1`] = `

<button type="button"
        class="v-btn foo"
>
  <div class="v-btn__content">
  </div>
</button>

`;
